style changes to fix certs on mobile

--- a/lms/static/sass/certificates/_certificate-template-01.scss
+++ b/lms/static/sass/certificates/_certificate-template-01.scss
@@ -121,6 +121,10 @@
         display: flex;
         align-items: center;
 
+        @media (max-width: 639px) {
+          display: block;
+        }
+
         .accomplishment-type-symbol {
           width: 15em;
           margin-right: 5em;
@@ -146,6 +150,10 @@
         height: 1em;
         background-color: $brand-primary-color;
         margin: 10em 0;
+
+        @media (max-width: 639px) {
+          width: 100%;
+        }
       }
 
       p {
@@ -157,12 +165,20 @@
         @include primary-font;
         color: $brand-primary-color;
         font-size: 18em;
+
+        @media (max-width: 639px) {
+          font-size: 6em;
+        }
       }
 
       .course-name-main {
         color: $brand-primary-color;
         font-size: 6em;
         @include primary-font-light;
+
+        @media (max-width: 639px) {
+          font-size: 5em;
+        }
       }
     }
   }
@@ -176,10 +192,18 @@
     @include display(flex);
     @include align-items(center);
     margin-bottom: 1em;
+
+    @media (max-width: 639px) {
+      display: block;
+    }
   }
 
   .info-right {
     margin-left: auto;
+
+    @media (max-width: 639px) {
+      margin-bottom: 1em;
+    }
   }
 
   a {
